--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,9 @@ javac.classpath=\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.junit-4.12.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-encoding UTF-8 
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
