--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,13 @@ dist.jar=${dist.dir}/RNTRee.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hamcrest-core-1.3.jar=../../Lib/hamcrest-core-1.3.jar
-file.reference.junit-4.12.jar=../../Lib/junit-4.12.jar
+file.reference.hamcrest-core-1.3.jar=Lib/hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=Lib/junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.junit-4.12.jar}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-encoding UTF-8 
 javac.deprecation=false
